--- a/index.html
+++ b/index.html
@@ -6,12 +6,29 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Assets/favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <title>Adote um Bichinho</title>
 </head>
 <body>
     <div class="container">
-        <header>h</header>
-        <main>m</main>
+        <header>
+            <nav>
+                
+                <ul>
+                    <a href="#" class="nav_search"><li>Doar</li></a>
+                    <a href="#" class="nav_search"><li>Sobre</li></a>
+                    <a href="#" class="nav_search"><li>Contato</li></a>
+                    <li><input type="text" class="nav_search" placeholder="Buscar"></li>
+                </ul>
+            </nav>
+        </header>
+
+
+        <main>
+            <img src="Assets/LogoOng.png" alt="Logo da Ong Adote um bichinho rj">
+            <p>ADOTE UM BICHINHO RJ</p></main>
         <section class="box1">box1</section>
         <section class="box2">box2</section>
         <section class="box3">box3</section>
