--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#" class="nav_search"><li>Doar</li></a>
                     <a href="#" class="nav_search"><li>Sobre</li></a>
                     <a href="#" class="nav_search"><li>Contato</li></a>
-                    <a href="#" class="nav_search"><li>Petlove</li></a>
+                    <a href="https://adoteumbichinhorj.petlove.com.br/" class="nav_search foto_nav"><img src="/Assets/download-removebg-preview.png" alt=""></a>
                 </ul>
             </nav>
         </header>
@@ -85,6 +85,17 @@
                 <li>Sabrinna Cristina Gomes Vicente</li>
             </a>
         </ul>
+        </div>
+        <div class="Parcerias">
+            <ul>
+                <li><h2>Parcerias</h2></li>
+                <a href="https://adoteumbichinhorj.parceiropetz.com.br/">
+                    <li>Loja Petz</li>
+                </a>
+                <a href="https://adoteumbichinhorj.petlove.com.br/">
+                    <li>Loja PetLove</li>
+                </a>
+            </ul>
         </div>
         <ul>
          <li><h1>Criadoras da ONG</h1></li>
