--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <a href="#">Lista de Bichinhos</a>
         </div>
         <section class="box1 box_foto1">
-            <img src="/Assets/LogoOng.png" alt="">
+            <img src="Assets/600x400.png" alt="">
             <h1>Sobre a ONG</h1>  
             <p>A ONG Adote um Bichinho RJ foi pensado por 4 amigas  apaixonadas por animais, elas decidiram que iriam transformar o sofrimento que viam em esperança graças ao desejo de cuidar e transformar as vidas dos animais abandonados do Rio de Janeiro.</p>
         </section>
         <section class="box2 box_foto1">
-            <img src="" alt="">
+            <img src="Assets/600x400.png" alt="">
              <h1>Apadrinhamento</h1>  
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ex quisquam, minus nulla incidunt ducimus vero atque nobis qui nesciunt necessitatibus fugit dignissimos molestiae suscipit esse illum alias, veniam dolorum?</p>
         </section>
         <section class="box3 box_foto1">
-            <img src="/Assets/Como ajudar.png" alt="">
+            <img src="Assets/600x400.png" alt="">
              <h1>Como Doar</h1>  
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ex quisquam, minus nulla incidunt ducimus vero atque nobis qui nesciunt necessitatibus fugit dignissimos molestiae suscipit esse illum alias, veniam dolorum?</p>
         </section>
         <section class="box4 box_foto1">
-            <img src="/Assets/Abrigo.png" alt="">
+            <img src="Assets/600x400.png" alt="">
              <h1>Sobre o Abrigo</h1>  
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ex quisquam, minus nulla incidunt ducimus vero atque nobis qui nesciunt necessitatibus fugit dignissimos molestiae suscipit esse illum alias, veniam dolorum?</p>
         </section>
