Alterações no footer

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <a href="#">Lista de Bichinhos</a>
         </div>
         <section class="box1 box_foto1">
-            <img src="Assets/600x400.png" alt="">
+            <img src="Assets/Placeholder.png" alt="">
             <h1>Sobre a ONG</h1>  
             <p>A ONG Adote um Bichinho RJ foi pensado por 4 amigas  apaixonadas por animais, elas decidiram que iriam transformar o sofrimento que viam em esperança graças ao desejo de cuidar e transformar as vidas dos animais abandonados do Rio de Janeiro.</p>
         </section>
         <section class="box2 box_foto1">
-            <img src="Assets/600x400.png" alt="">
+            <img src="Assets/Placeholder.png" alt="">
              <h1>Apadrinhamento</h1>  
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ex quisquam, minus nulla incidunt ducimus vero atque nobis qui nesciunt necessitatibus fugit dignissimos molestiae suscipit esse illum alias, veniam dolorum?</p>
         </section>
         <section class="box3 box_foto1">
-            <img src="Assets/600x400.png" alt="">
+            <img src="Assets/Placeholder.png" alt="">
              <h1>Como Doar</h1>  
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ex quisquam, minus nulla incidunt ducimus vero atque nobis qui nesciunt necessitatibus fugit dignissimos molestiae suscipit esse illum alias, veniam dolorum?</p>
         </section>
         <section class="box4 box_foto1">
-            <img src="Assets/600x400.png" alt="">
+            <img src="Assets/Placeholder.png" alt="">
              <h1>Sobre o Abrigo</h1>  
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ex quisquam, minus nulla incidunt ducimus vero atque nobis qui nesciunt necessitatibus fugit dignissimos molestiae suscipit esse illum alias, veniam dolorum?</p>
         </section>
@@ -65,52 +65,48 @@
         <section class="box7 box_foto2">box7</section>
         <section class="big_box">
             <div class="botao_vakinha"><a href="https://www.vakinha.com.br/vaquinha/canis-adote-um-bichinho-rj" target="_blank">Ajude-Nos</a></div>
-            <div><img src="Assets/1695136009.373.png" alt=""></div>
+            <div><img src="Assets/Vakinha.png" alt=""></div>
         </section>
         <footer>
-            <div class="Criadores"><ul>
+            <div class="footer_list">
+                <ul>
+                    <li><h1>Criadores do Site</h1></li>
+                    <a href="https://www.linkedin.com/in/rodrigo-gama-b38705231/">
+                        <li><p>Rodrigo Correa da Gama</p></li>
+                    </a>
+                    <a href="www.linkedin.com/in/fabrício-freitas-gomes-62b48b222">
+                        <li><p>Fabricio Freitas Gomes</p></li>
+                    </a>
+                    <a href="https://www.linkedin.com/in/beatriz-d-177976252/">
+                        <li><p>Beatriz de Souza Santos Rio Branco</p></li>
+                    </a>
+                    <a href="">
+                        <li><p>Sabrinna Cristina Gomes Vicente</p></li>
+                    </a>
+                </ul>
+            </div>
 
-            <li><h1>Criadores do Site</h1></li>
-            <!--CTRL+Shift+P+ENTER:digita WRAP enter e digita A -->
-            <a href="https://www.linkedin.com/in/rodrigo-gama-b38705231/">
-                <li>Rodrigo Correa da Gama</li>
-            </a>
-            <a href="www.linkedin.com/in/fabrício-freitas-gomes-62b48b222">
-                <li>Fabricio Freitas Gomes</li>
-            </a>
-            <a href="https://www.linkedin.com/in/beatriz-d-177976252/">
-                <li>Beatriz de Souza Santos Rio Branco</li> 
-            </a>
-            <a href="">
-                <li>Sabrinna Cristina Gomes Vicente</li>
-            </a>
-        </ul>
-        </div>
-        <div class="Parcerias">
-            <ul>
-                <li><h2>Parcerias</h2></li>
-                <a href="https://adoteumbichinhorj.parceiropetz.com.br/">
-                    <li>Loja Petz</li>
-                </a>
-                <a href="https://adoteumbichinhorj.petlove.com.br/">
-                    <li>Loja PetLove</li>
-                </a>
-            </ul>
-        </div>
-        <ul>
-         <li><h1>Criadoras da ONG</h1></li>
-         <li>Giulia Di Sipio</li>
-         <li>Débora Lima</li>
-         <li>Maria Gabriella</li>
-         <li>Shirley Calmon</li>
-        </ul>
-        
-        <div class="social-links"><!--target blank faz abrir uma pagina nova com o link-->
-            <h1>Siga-nos</h1>
-            <a href="https://m.facebook.com/Adoteumbichinhorjj/" target="_blank"><i class="fab fa-facebook social-icon"></i></a>
-            <a href="https://www.instagram.com/adoteumbichinhorj/"target="_blank"><i class="fab fa-instagram social-icon"></i></a>
-            <a href="https://github.com/FRgama/Projeto1"target="_blank"><i class="fab fa-github social-icon"></i></a>
-        </div>
+            <div class="footer_list">
+                <ul>
+                    <li><h1>Parcerias</h1></li>
+                
+                    <a href="https://adoteumbichinhorj.parceiropetz.com.br/">
+                        <li><p>Loja Petz</p></li>
+                    </a>
+                    <a href="https://adoteumbichinhorj.petlove.com.br/">
+                        <li><p>Loja PetLove</p></li>
+                    </a>
+                </ul>
+            </div>
+                <div class="footer_list">
+                    <ul>
+                        <li><h1>Criadoras da ONG</h1></li>
+                        <li><p>Giulia Di Sipio</p></li>
+                        <li><p>Débora Lima</p></li>
+                        <li><p>Maria Gabriella</p></li>
+                        <li><p>Shirley Calmon</p></li>
+                    </ul>
+                </div>
         </footer>
     </div>
 </body>
