--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                    
                     <a href="#" class="nav_search"><li>Doar</li></a>
-                    <a href="#" class="nav_search"><li>Sobre</li></a>
+                    <a href="#infos" class="nav_search"><li>Sobre</li></a>
                     <a href="#" class="nav_search"><li>Contato</li></a>
                     <a href="https://adoteumbichinhorj.petlove.com.br/" class="nav_search foto_nav"><img src="/Assets/download-removebg-preview.png" alt=""></a>
                 </ul>
@@ -34,7 +34,7 @@
                     <h1>adote um bichinho rj</h1>           
         </main>
         
-        <div class="info_section">
+        <div class="info_section" id="infos">
             <h1>Informações</h1>
             <a href="#">Lista de Bichinhos</a>
         </div>
