Adição do HTML e CSS da lista de bichinhos

--- a/ListaDeBichinhos.html
+++ b/ListaDeBichinhos.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ListaDeBichinhos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="Assets/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <title>Adote um Bichinho</title>
+    <title>Lista De Bichinhos</title>
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,7 @@
             <nav>
                  <!--<a href="#" class="nav_search"><li> <img src="/Assets/LogoOng.png" alt=""></li>-->
                 <ul>
-                   
+
                     <a href="#" class="nav_search"><li>Doar</li></a>
                     <a href="#infos" class="nav_search"><li>Sobre</li></a>
                     <a href="#" class="nav_search"><li>Contato</li></a>
@@ -31,12 +31,13 @@
 
         <main>  
                     <img src="Assets/LogoOng.png" alt="Logo da Ong Adote um bichinho rj">
-                    <h1>adote um bichinho rj</h1>           
+                    <h1>Lista De Bichinhos</h1>           
         </main>
         
         <div class="info_section" id="infos">
-            <h1>Informações</h1>
-            <a href="ListaDeBichinhos.html">Lista de Bichinhos</a>
+            <h1>Como fazer uma adoção?</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At cumque saepe esse suscipit id illum explicabo enim reprehenderit voluptatibus! Ipsam, obcaecati? Dignissimos obcaecati dolore ratione pariatur. Aperiam alias inventore error?</p>
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAmREZXkeGckyDZsXmt4nZuf95HfvQnqGERcpFZMf8czJ4A/viewform ">Formulario de Adoção</a>
         </div>
         <section class="box1 box_foto1">
             <img src="Assets/Placeholder.png" alt="">
