--- a/home-page.html
+++ b/home-page.html
@@ -15,9 +15,9 @@
             <nav class="menu">
                 <div class ="logo"><a href="home-page.html"><img src="Assets/LogoOng.png" alt="Logo da ONG Adote um bichinho rj"></a></div>
                 <ul class = menu-items>
-                    <li><a href="pages/adote.html">Adote</a></li>
+                    <li><a href="adote.html">Adote</a></li>
                     <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="pages/contato.html">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                     <li class="nav_img"><img src="Assets/Petlove.png" alt=""></li>
                 </ul>
                 <div class="perfil-bd"><a href=""> <img src="https://placehold.co/100x100/D5F0FF/D5F0FF" alt=""></a></div>  
@@ -73,8 +73,16 @@
 
         <!-- VAKINHA -->
         <section class="vakinha">
-            <div><img src="/Assets/img-vakinha.png" alt=""></div>
-            <div><a href="//www.vakinha.com.br/vaquinha/canis-adote-um-bichinho-rj?"><button> Ajude-Nos </button></a></div>
+            <div class="vakinhaImg"><img src="/Assets/img-vakinha.png" alt=""></div>
+            <div class="vakinhaButton"><a href="//www.vakinha.com.br/vaquinha/canis-adote-um-bichinho-rj?"><button> Ajude-Nos </button></a></div>
+        </section>
+
+        <!--Lista de bichinhos-->
+        <section class="vakinha">
+            <div class="vakinhaButton"><a href="/pages/ListaDeBichinhos.html"><button> Confira aqui a lista de bichinhos disponiveis 
+            </button></a></div>
+            <div class="vakinhaImg"><img src="/Assets/Placeholder.png" alt=""></div>
+
         </section>
 
         <!-- RODAPÉ -->
