--- a/home-page.html
+++ b/home-page.html
@@ -79,7 +79,7 @@
 
         <!--Lista de bichinhos-->
         <section class="vakinha">
-            <div class="vakinhaButton"><a href="/pages/ListaDeBichinhos.html"><button> Confira aqui a lista de bichinhos disponiveis 
+            <div class="vakinhaButton"><a href="adote.html"><button> Confira aqui a lista de bichinhos disponiveis 
             </button></a></div>
             <div class="vakinhaImg"><img src="/Assets/Placeholder.png" alt=""></div>
 
