mudança no header da pagina contato

--- a/contato.html
+++ b/contato.html
@@ -9,23 +9,27 @@
     <title>Document</title>
 </head>
 <body>
-
-    <div class="container">
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="home-page.html">Home</a></li>
-                    <li><a href="adote.html">Adote</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                    <li><a href="https://www.petlove.com.br" target="_blank"><img src="Assets/PetloveHeader.png" alt="Logo da empresa PetLove"></a></li>              
-                </ul>
-            </nav>
-
-            <div class="HeaderTema">
-                <div class="HeaderImg"><img src="Assets/LogoOng.png" alt="Logo da Adote um Bichinho RJ"></div>
-                <div class="HeaderText">FALE CONOSCO</div>
+<div class="container">
+    <header>
+        <nav class="menu">
+            <div class="nav_esquerda">   
+                <div class ="logo"><a href="home-page.html"><img src="Assets/LogoOng.png" alt="Logo da ONG Adote um bichinho rj"></a></div>
             </div>
-        </header>
+            <div class="nav_direita">
+                <ul class = menu-items>
+                    <li><a href="adote.html">Adote</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                    <li class="nav_img"><img src="Assets/Petlove.png" alt=""></li>
+                </ul>
+            </div>  
+        </nav>
+    </header> 
+
+    <!-- MAIN: Título + Imagem Grande -->
+    <main>
+        <section class="titulo"><p>FALE CONOSCO</p></section>
+    </main>
 
         <main>
             <section>
@@ -111,6 +115,6 @@
                 </div>
             </footer>     
     </div>
-    
+</div>
 </body>
 </html>
