Adição da logo Petz

--- a/adote.html
+++ b/adote.html
@@ -19,6 +19,7 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="contato.html">Contato</a></li>
                     <li class="nav_img"><img src="Assets/Petlove.png" alt=""></li>
+                    <li class="nav_img"><img src="Assets/PetzLogo.png" alt=""></li>
                 </ul>
                   
             </nav>
