--- a/home-page.html
+++ b/home-page.html
@@ -19,8 +19,8 @@
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="contato.html">Contato</a></li>
                     <li class="nav_img"><img src="Assets/Petlove.png" alt=""></li>
+                    <li class="nav_img"><img src="Assets/PetzLogo.png" alt=""></li>
                 </ul>
-                  
             </nav>
         </header> 
 
