Mudanças na página Contato

--- a/adote.html
+++ b/adote.html
@@ -30,7 +30,7 @@
             <section class="titulo"><p>ADOÇÃO</p></section>
         </main>
    
-        <!-- SOBRE A ONG + COMO AJUDAR -->
+        <!-- COMO ADOTAR + FORMULÁRIO -->
         <div class="sec1">
             <section >
                 <h1>Como Fazer uma Adoção?</h1>
@@ -39,7 +39,7 @@
 
             <section >
                 <img src="/Assets/Abrigo.png" alt="">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAmREZXkeGckyDZsXmt4nZuf95HfvQnqGERcpFZMf8czJ4A/viewform"></a><button>Formulário de Adoção</button></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScNAmREZXkeGckyDZsXmt4nZuf95HfvQnqGERcpFZMf8czJ4A/viewform"><button>Formulário de Adoção</button></a>
             </section>
         </div>
 
