--- a/contato.html
+++ b/contato.html
@@ -32,48 +32,28 @@
         <section class="titulo"><p>FALE CONOSCO</p></section>
     </main>
 
-        <main>
-            <section>
-                <div class="RedesSociais">
-                    <h1>Redes Sociais</h1>
-                    <div class="MainImages">
-                        <div class="MainImg">
-                            <img src="Assets/img-3.jpg" alt="Imagem de um cachorro">
-                            <a href="">
-                                <div class="SocialMediaArea" id="MainImg1">
-                                    <div class="SocialMediaImg"><img src="Assets/FacebookLogo.png" alt="Logo do Facebook"></div>
-                                    <div class="SocialMediaText">Facebook</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="MainImg">
-                            <img src="Assets/img-2.jpg" alt="Imagem de um Cachorro">
-                                <a href="">
-                                    <div class="SocialMediaArea" id="MainImg2">
-                                            <div class="SocialMediaImg"><img src="Assets/InstagramLogo.png" alt="Logo do Instagram"></div>
-                                            <div class="SocialMediaText">Instagram</div>
-                                    </div>
-                                </a>
-                        </div>
-                    </div>
-            </section>
-
-            <section class="SectionForm">
-                    <h1>Fale Conosco</h1>
-                    <div class="FormularioDiv">
-                        <form action="">
-                            <p>Nome</p>
-                            <input type="text" required>
-                        
-                            <p>E-mail</p>
-                            <input type="email" required>
-                            <p>Assunto</p>
-                            <textarea name="Assunto" id="" cols="20" rows="10"></textarea>
-                            <input type="button" value="Enviar">
-                    </div>
-                    </form>                       
-            </section>
-        </main>
+    <div class="formContainer">
+        <div><img class="formImg" src="./Assets/img-1.jpg"/></div>
+        <div>
+            <h1 >Precisa de Ajuda? Estamos Aqui!</h1>
+             <div>
+                <div class="formContainer2">
+                    <form>
+                        <input type="text" placeholder="Nome" />
+                        <input type="email" placeholder="E-mail" />
+                        <input type="text" placeholder= "Assunto" />
+                        <input type="textarea" placeholder= "Mensagem" />
+                        <Button type="submit">Enviar</Button>
+                    </form>    
+                </div>
+            </div>
+            <div>
+                <a href='https://www.instagram.com/adoteumbichinhorj/'><img src="" alt=""></a>
+                <a href='https://www.facebook.com/Adoteumbichinhorjj/'><img src="" alt=""></a>
+            </div>
+        </div>
+    </div>
+   
 
             <footer>
                 <div class="footer_list">
