--- a/home-page.html
+++ b/home-page.html
@@ -18,8 +18,8 @@
                     <li><a href="adote.html">Adote</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="contato.html">Contato</a></li>
-                    <li class="nav_img"><img src="Assets/Petlove.png" alt=""></li>
-                    <li class="nav_img"><img src="Assets/PetzLogo.png" alt=""></li>
+                    <li class="nav_img"><a href="https://adoteumbichinhorj.petlove.com.br"><img src="Assets/Petlove.png" alt=""></a></li>
+                    <li class="nav_img"><a href="https://www.petz.com.br/parceiro/adoteumbichinhorj"><img src="Assets/PetzLogo.png" alt=""></a></li>
                 </ul>
             </nav>
         </header> 
